feat(grpc): implement ArticleSummary database layer